--- a/CuoiKyOOP/QLHS/src/main/resources/com/qlhs/qlhs/view.fxml
+++ b/CuoiKyOOP/QLHS/src/main/resources/com/qlhs/qlhs/view.fxml
@@ -16,10 +16,10 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.qlhs.qlhs.Controller">
-   <Pane fx:id="thongTinHocSinh">
+<AnchorPane fx:controller="com.qlhs.qlhs.Controller" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" >
+   <Pane fx:id="thongTinHocSinh" >
 
-   <children>
+   <children >
       <Label layoutX="383.0" layoutY="20.0" text="Quản Lý Học Sinh">
          <font>
             <Font size="29.0" />
@@ -155,7 +155,7 @@
          </children>
       </GridPane>
 
-      <Button layoutX="331.0" layoutY="331.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="81.0" text="Làm Mới">
+      <Button onAction="#lamMoi" layoutX="331.0" layoutY="331.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="81.0" text="Làm Mới">
          <font>
             <Font size="15.0" />
          </font>
@@ -313,7 +313,7 @@
                <TextField GridPane.columnIndex="10" />
             </children>
          </GridPane>
-         <Button layoutX="331.0" layoutY="331.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="81.0" text="Làm Mới">
+         <Button fx:id="lamMoi" onAction="#lamMoi" layoutX="331.0" layoutY="331.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="81.0" text="Làm Mới">
             <font>
                <Font size="15.0" />
             </font>
