--- a/CuoiKyOOP/QLHS/src/main/resources/com/qlhs/qlhs/view.fxml
+++ b/CuoiKyOOP/QLHS/src/main/resources/com/qlhs/qlhs/view.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -16,25 +18,20 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:controller="com.qlhs.qlhs.Controller" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" >
-   <Pane fx:id="thongTinHocSinh" >
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.qlhs.qlhs.Controller">
+   <Pane fx:id="thongTinHocSinh">
 
-   <children >
-      <Label layoutX="383.0" layoutY="20.0" text="Quản Lý Học Sinh">
-         <font>
-            <Font size="29.0" />
-         </font>
-      </Label>
+   <children>
 
-      <GridPane layoutX="7.0" layoutY="99.0" prefHeight="250.0" prefWidth="980.0">
+      <GridPane layoutX="7.0" layoutY="99.0" prefHeight="218.0" prefWidth="980.0">
          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="238.0" minWidth="10.0" prefWidth="148.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="304.0" minWidth="10.0" prefWidth="193.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="330.0" minWidth="0.0" prefWidth="60.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="413.0" minWidth="10.0" prefWidth="91.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="463.0" minWidth="10.0" prefWidth="198.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="463.0" minWidth="10.0" prefWidth="66.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="463.0" minWidth="10.0" prefWidth="50.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="238.0" minWidth="10.0" prefWidth="125.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="304.0" minWidth="200.0" prefWidth="200.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="330.0" minWidth="0.0" prefWidth="61.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="413.0" minWidth="125.0" prefWidth="111.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="463.0" minWidth="200.0" prefWidth="200.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="463.0" minWidth="10.0" prefWidth="61.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="463.0" minWidth="10.0" prefWidth="75.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="463.0" minWidth="10.0" prefWidth="168.0" />
          </columnConstraints>
 
@@ -44,7 +41,6 @@
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
 
@@ -102,17 +98,29 @@
 
 
 
-            <Label text="Tỉnh/Thành Phố" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-            <ChoiceBox fx:id="TTP_CB" prefHeight="25.0" prefWidth="201.0" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+            <Label text="Tỉnh/Thành Phố" GridPane.columnIndex="3" GridPane.rowIndex="2">
+                  <font>
+                     <Font size="14.0" />
+                  </font></Label>
+            <ComboBox fx:id="TTP_CB" prefHeight="25.0" prefWidth="201.0" GridPane.columnIndex="4" GridPane.rowIndex="2" />
 
-            <Label text="Quận/Huyện" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-            <ChoiceBox fx:id="QH_CB" prefHeight="25.0" prefWidth="205.0" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+            <Label text="Quận/Huyện" GridPane.columnIndex="3" GridPane.rowIndex="3">
+                  <font>
+                     <Font size="14.0" />
+                  </font></Label>
+            <ComboBox fx:id="QH_CB" prefHeight="25.0" prefWidth="205.0" GridPane.columnIndex="4" GridPane.rowIndex="3" />
 
-            <Label text="Phường/Xã/Thị Trấn" GridPane.columnIndex="3" GridPane.rowIndex="4" />
-            <ChoiceBox fx:id="PX_CB" prefHeight="25.0" prefWidth="203.0" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+            <Label text="Phường/Xã/TT" GridPane.columnIndex="3" GridPane.rowIndex="4">
+                  <font>
+                     <Font size="14.0" />
+                  </font></Label>
+            <ComboBox fx:id="PX_CB" prefHeight="25.0" prefWidth="203.0" GridPane.columnIndex="4" GridPane.rowIndex="4" />
 
 
-            <Label text="Số Điện Thoại" GridPane.columnIndex="3" />
+            <Label text="Số Điện Thoại" GridPane.columnIndex="3">
+                  <font>
+                     <Font size="14.0" />
+                  </font></Label>
 
             <TextField fx:id="SDT_TF" prefHeight="25.0" prefWidth="352.0" promptText="0123456789" GridPane.columnIndex="4">
                <cursor>
@@ -120,7 +128,10 @@
                </cursor>
             </TextField>
 
-            <Label text="Email (Tùy chọn)" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <Label text="Email (Tùy chọn)" GridPane.columnIndex="3" GridPane.rowIndex="1">
+                  <font>
+                     <Font size="14.0" />
+                  </font></Label>
 
             <TextField fx:id="email_TF" prefHeight="25.0" prefWidth="174.0" promptText="example@example.com" GridPane.columnIndex="4" GridPane.rowIndex="1">
                <cursor>
@@ -128,7 +139,10 @@
                </cursor>
             </TextField>
 
-            <Label text="Chi tiết" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+            <Label text="Chi tiết" GridPane.columnIndex="3" GridPane.rowIndex="5">
+                  <font>
+                     <Font size="14.0" />
+                  </font></Label>
 
             <TextField fx:id="chiTiet_TF" prefHeight="25.0" prefWidth="174.0" promptText="Số 123, Phố ABC" GridPane.columnIndex="4" GridPane.rowIndex="5">
                <cursor>
@@ -150,12 +164,28 @@
                </font></Label>
 
             <Label GridPane.columnIndex="6" GridPane.rowIndex="1" />
-            <TextField fx:id="lop_TF" prefHeight="25.0" prefWidth="70.0" GridPane.columnIndex="7" />
+            <TextField fx:id="lop_TF" prefHeight="25.0" prefWidth="88.0" GridPane.columnIndex="7" />
+               <Button fx:id="" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="Thêm mới" GridPane.columnIndex="1">
+                  <GridPane.margin>
+                     <Insets left="123.0" />
+                  </GridPane.margin>
+               </Button>
+               <Label prefHeight="20.0" prefWidth="71.0" text="Ghi chú" GridPane.columnIndex="6" GridPane.rowIndex="1">
+                  <font>
+                     <Font size="14.0" />
+                  </font>
+               </Label>
+               <TextField fx:id="lop_TF1" prefHeight="25.0" prefWidth="70.0" GridPane.columnIndex="7" GridPane.rowIndex="1" />
 
          </children>
       </GridPane>
+      <Label layoutX="383.0" layoutY="20.0" text="Quản Lý Học Sinh">
+         <font>
+            <Font size="29.0" />
+         </font>
+      </Label>
 
-      <Button onAction="#lamMoi" layoutX="331.0" layoutY="331.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="81.0" text="Làm Mới">
+      <Button layoutX="331.0" layoutY="331.0" mnemonicParsing="false" onAction="#lamMoiTT" prefHeight="35.0" prefWidth="81.0" text="Làm Mới">
          <font>
             <Font size="15.0" />
          </font>
@@ -200,6 +230,7 @@
       <TextField fx:id="timKiem_TF" layoutX="762.0" layoutY="375.0" prefHeight="25.0" prefWidth="227.0" />
    </children>
    </Pane>
+   <ChoiceBox fx:id="bang_CB" layoutX="10.0" layoutY="375.0" prefHeight="25.0" prefWidth="138.0" />
 
 
          <Pane fx:id="bangDiem">
@@ -258,7 +289,7 @@
                      <Font size="14.0" />
                   </font>
                </Label>
-               <Label text="Thể dục" GridPane.columnIndex="12">
+               <Label text="Thể dục" GridPane.columnIndex="9" GridPane.rowIndex="2">
                   <font>
                      <Font size="14.0" />
                   </font>
@@ -283,12 +314,7 @@
                      <Font size="14.0" />
                   </font>
                </Label>
-               <Label text="Tin học" GridPane.columnIndex="9" GridPane.rowIndex="2">
-                  <font>
-                     <Font size="14.0" />
-                  </font>
-               </Label>
-               <Label text="Âm nhạc" GridPane.columnIndex="9" GridPane.rowIndex="1">
+               <Label text="Tin học" GridPane.columnIndex="9" GridPane.rowIndex="1">
                   <font>
                      <Font size="14.0" />
                   </font>
@@ -298,22 +324,21 @@
                      <Font size="14.0" />
                   </font>
                </Label>
-               <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-               <TextField prefHeight="25.0" prefWidth="40.0" GridPane.columnIndex="1" />
-               <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
-               <TextField GridPane.columnIndex="4" />
-               <TextField GridPane.columnIndex="4" GridPane.rowIndex="1" />
-               <TextField GridPane.columnIndex="13" />
-               <TextField GridPane.columnIndex="10" GridPane.rowIndex="1" />
-               <TextField GridPane.columnIndex="10" GridPane.rowIndex="2" />
-               <TextField GridPane.columnIndex="7" GridPane.rowIndex="2" />
-               <TextField GridPane.columnIndex="7" GridPane.rowIndex="1" />
-               <TextField GridPane.columnIndex="7" />
-               <TextField GridPane.columnIndex="4" GridPane.rowIndex="2" />
-               <TextField GridPane.columnIndex="10" />
+               <TextField fx:id="toan" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+               <TextField fx:id="nguVan" prefHeight="25.0" prefWidth="40.0" GridPane.columnIndex="1" />
+               <TextField fx:id="vatLi" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+               <TextField fx:id="hoaHoc" GridPane.columnIndex="4" />
+               <TextField fx:id="sinhHoc" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+               <TextField fx:id="theDuc" GridPane.columnIndex="10" GridPane.rowIndex="2" />
+               <TextField fx:id="tinHoc" GridPane.columnIndex="10" GridPane.rowIndex="1" />
+               <TextField fx:id="ngoaiNgu" GridPane.columnIndex="7" GridPane.rowIndex="2" />
+               <TextField fx:id="DGCD" GridPane.columnIndex="7" GridPane.rowIndex="1" />
+               <TextField fx:id="diaLy" GridPane.columnIndex="7" />
+               <TextField fx:id="lichSu" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+               <TextField fx:id="congNghe" GridPane.columnIndex="10" />
             </children>
          </GridPane>
-         <Button fx:id="lamMoi" onAction="#lamMoi" layoutX="331.0" layoutY="331.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="81.0" text="Làm Mới">
+         <Button fx:id="lamMoi" layoutX="331.0" layoutY="331.0" mnemonicParsing="false" onAction="#lamMoiDiem" prefHeight="35.0" prefWidth="81.0" text="Làm Mới">
             <font>
                <Font size="15.0" />
             </font>
@@ -343,13 +368,13 @@
                <TableColumn prefWidth="35.0" text="SH" />
                <TableColumn prefWidth="35.0" text="LS" />
                <TableColumn prefWidth="35.0" text="ĐL" />
-               <TableColumn fx:id="ghiChuColumn2" prefWidth="45.0" text="GDCD" />
-               <TableColumn fx:id="ghiChuColumn3" prefWidth="35.0" text="TA" />
-               <TableColumn fx:id="ghiChuColumn4" prefWidth="35.0" text="CN" />
-               <TableColumn fx:id="ghiChuColumn5" prefWidth="35.0" text="ÂN" />
-               <TableColumn fx:id="ghiChuColumn6" prefWidth="35.0" text="TH" />
-               <TableColumn fx:id="ghiChuColumn7" prefWidth="40.0" text="TD" />
-               <TableColumn fx:id="ghiChuColumn71" prefWidth="73.0" text="Ghi chú" />
+               <TableColumn prefWidth="45.0" text="GDCD" />
+               <TableColumn prefWidth="35.0" text="NN" />
+               <TableColumn prefWidth="35.0" text="CN" />
+               <TableColumn prefWidth="35.0" text="ÂN" />
+               <TableColumn prefWidth="35.0" text="TH" />
+               <TableColumn prefWidth="40.0" text="TD" />
+               <TableColumn prefWidth="73.0" text="Ghi chú" />
             </columns>
          </TableView>
 <!--         <ChoiceBox fx:id="bangDiem_CB" layoutX="10.0" layoutY="375.0" prefHeight="25.0" prefWidth="138.0" />-->
@@ -423,5 +448,4 @@
 
       </children>
    </Pane>
-   <ChoiceBox fx:id="bang_CB" layoutX="10.0" layoutY="375.0" prefHeight="25.0" prefWidth="138.0" />
 </AnchorPane>
