--- a/CuoiKyOOP/QLHS/src/main/resources/com/qlhs/qlhs/thongTinHocSinhView.fxml
+++ b/CuoiKyOOP/QLHS/src/main/resources/com/qlhs/qlhs/thongTinHocSinhView.fxml
@@ -17,10 +17,10 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.qlhs.qlhs.TTController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.qlhs.qlhs.TTController">
     <children>
 
-        <GridPane layoutX="7.0" layoutY="99.0" prefHeight="218.0" prefWidth="980.0">
+        <GridPane layoutX="7.0" layoutY="99.0" maxWidth="1180.0" minWidth="1180.0" prefHeight="218.0" prefWidth="1180.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="238.0" minWidth="10.0" prefWidth="125.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="304.0" minWidth="200.0" prefWidth="200.0" />
@@ -44,7 +44,7 @@
             <children>
                 <Button mnemonicParsing="false" onAction="#themMoi" prefHeight="25.0" prefWidth="70.0" text="Thêm mới" GridPane.columnIndex="1">
                     <GridPane.margin>
-                        <Insets left="123.0" />
+                        <Insets left="150.0" />
                     </GridPane.margin>
                 </Button>
                 <Label text="Mã Học Sinh">
@@ -94,7 +94,7 @@
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <DatePicker fx:id="ngaySinh_Date" accessibleRole="COMBO_BOX" prefHeight="25.0" prefWidth="194.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                <DatePicker fx:id="ngaySinh_Date" accessibleRole="COMBO_BOX" prefHeight="25.0" prefWidth="221.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
 
                 <Label text="Mã Định Danh" GridPane.rowIndex="5">
@@ -116,7 +116,7 @@
                     </cursor>
                 </TextField>
 
-                <Label text="Email (Tùy chọn)" GridPane.columnIndex="3" GridPane.rowIndex="1">
+                <Label text="Email" GridPane.columnIndex="3" GridPane.rowIndex="1">
                     <font>
                         <Font size="14.0" />
                     </font>
@@ -132,21 +132,21 @@
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <ComboBox fx:id="TTP_CB" prefHeight="25.0" prefWidth="201.0" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+                <ComboBox fx:id="TTP_CB" prefHeight="25.0" prefWidth="160.0" GridPane.columnIndex="4" GridPane.rowIndex="2" />
 
                 <Label text="Quận/Huyện" GridPane.columnIndex="3" GridPane.rowIndex="3">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <ComboBox fx:id="QH_CB" prefHeight="25.0" prefWidth="205.0" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+                <ComboBox fx:id="QH_CB" prefHeight="25.0" prefWidth="160.0" GridPane.columnIndex="4" GridPane.rowIndex="3" />
 
                 <Label text="Phường/Xã/TT" GridPane.columnIndex="3" GridPane.rowIndex="4">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <ComboBox fx:id="PX_CB" prefHeight="25.0" prefWidth="203.0" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+                <ComboBox fx:id="PX_CB" prefHeight="25.0" prefWidth="160.0" GridPane.columnIndex="4" GridPane.rowIndex="4" />
 
                 <Label text="Chi tiết" GridPane.columnIndex="3" GridPane.rowIndex="5">
                     <font>
@@ -168,65 +168,85 @@
                 </Label>
 
                 <Label GridPane.columnIndex="6" GridPane.rowIndex="1" />
-                <TextField fx:id="lop_TF" prefHeight="25.0" prefWidth="88.0" promptText="12A" GridPane.columnIndex="7" />
+                <TextField fx:id="lop_TF" maxWidth="40.0" minWidth="40.0" prefHeight="25.0" prefWidth="40.0" promptText="12A" GridPane.columnIndex="7" />
                 <Label prefHeight="20.0" prefWidth="71.0" text="Ghi chú" GridPane.columnIndex="6" GridPane.rowIndex="1">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
                 <TextField fx:id="lop_TF1" prefHeight="25.0" prefWidth="70.0" GridPane.columnIndex="7" GridPane.rowIndex="1" />
+            <RadioButton mnemonicParsing="false" text="Lưu" GridPane.columnIndex="4" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets left="180.0" />
+               </GridPane.margin>
+            </RadioButton>
+            <RadioButton mnemonicParsing="false" text="Lưu" GridPane.columnIndex="4" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets left="180.0" />
+               </GridPane.margin>
+            </RadioButton>
+            <RadioButton mnemonicParsing="false" text="Lưu" GridPane.columnIndex="4" GridPane.rowIndex="4">
+               <GridPane.margin>
+                  <Insets left="180.0" />
+               </GridPane.margin>
+            </RadioButton>
+            <RadioButton mnemonicParsing="false" text="Lưu" GridPane.columnIndex="7">
+               <GridPane.margin>
+                  <Insets left="60.0" />
+               </GridPane.margin>
+            </RadioButton>
 
             </children>
         </GridPane>
-        <Label layoutX="383.0" layoutY="20.0" text="Quản Lý Học Sinh">
-            <font>
-                <Font size="29.0" />
-            </font>
-        </Label>
 
-        <Button layoutX="331.0" layoutY="331.0" mnemonicParsing="false" onAction="#lamMoiTT" prefHeight="35.0" prefWidth="81.0" text="Làm Mới">
+        <Button layoutX="443.0" layoutY="333.0" mnemonicParsing="false" onAction="#lamMoiTT" prefHeight="35.0" prefWidth="81.0" text="Làm Mới">
             <font>
                 <Font size="15.0" />
             </font>
         </Button>
 
-        <Button fx:id="luu_Btn" layoutX="451.0" layoutY="331.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="81.0" text="Lưu">
+        <Button fx:id="luu_Btn" layoutX="563.0" layoutY="333.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="81.0" text="Lưu">
             <font>
                 <Font size="15.0" />
             </font>
         </Button>
 
-        <Button layoutX="565.0" layoutY="331.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="81.0" text="Xóa">
+        <Button layoutX="677.0" layoutY="333.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="81.0" text="Xóa">
             <font>
                 <Font size="15.0" />
             </font>
         </Button>
 
-        <Label layoutX="696.0" layoutY="379.0" text="Tìm Kiếm">
+        <Label layoutX="897.0" layoutY="379.0" text="Tìm Kiếm">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <TextField fx:id="timKiem_TF" layoutX="762.0" layoutY="375.0" prefHeight="25.0" prefWidth="227.0" promptText="toán &gt; 9" />
+        <TextField fx:id="timKiem_TF" layoutX="963.0" layoutY="375.0" prefHeight="25.0" prefWidth="227.0" promptText="toán &gt; 9" />
 
-        <TableView fx:id="tableTTView" layoutX="10.0" layoutY="403.0" prefHeight="391.0" prefWidth="980.0">
+        <TableView fx:id="tableTTView" layoutX="10.0" layoutY="403.0" maxWidth="1180.0" minWidth="1180.0" prefHeight="391.0" prefWidth="1180.0">
             <columns>
-                <TableColumn fx:id="sttColumn" prefWidth="45.0" text="STT" />
-                <TableColumn fx:id="maHSColumn" prefWidth="92.0" text="Mã HS" />
-                <TableColumn fx:id="hoDemColumn" prefWidth="144.0" text="Họ Đệm" />
-                <TableColumn fx:id="tenColumn" minWidth="0.0" prefWidth="63.0" text="Tên" />
-                <TableColumn fx:id="ngaySinhColumn" prefWidth="92.0" text="Ngày Sinh" />
-                <TableColumn fx:id="gioiTinhColumn" prefWidth="56.0" text="Giới Tính" />
-                <TableColumn fx:id="maDinhDanhColumn" prefWidth="102.0" text="Mã Định Danh" />
-                <TableColumn fx:id="sdtColumn" prefWidth="55.0" text="SĐT" />
-                <TableColumn fx:id="emailColumn" prefWidth="64.0" text="Email" />
-                <TableColumn fx:id="lopColumn" prefWidth="28.0" text="Lớp" />
-                <TableColumn fx:id="diaChiColumn" prefWidth="144.0" text="Địa chỉ" />
-                <TableColumn fx:id="ghiChuTTColumn" prefWidth="94.0" text="Ghi Chú" />
+                <TableColumn fx:id="sttColumn" prefWidth="40.0" text="STT" />
+                <TableColumn fx:id="maHSColumn" text="Mã HS" />
+                <TableColumn fx:id="hoDemColumn" prefWidth="140.0" text="Họ Đệm" />
+                <TableColumn fx:id="tenColumn" minWidth="0.0" prefWidth="60.0" text="Tên" />
+                <TableColumn fx:id="ngaySinhColumn" prefWidth="75.0" text="Ngày Sinh" />
+                <TableColumn fx:id="gioiTinhColumn" prefWidth="40.0" text="Nam" />
+                <TableColumn fx:id="maDinhDanhColumn" prefWidth="110.0" text="Mã Định Danh" />
+                <TableColumn fx:id="sdtColumn" prefWidth="90.0" text="SĐT" />
+                <TableColumn fx:id="emailColumn" prefWidth="110.0" text="Email" />
+                <TableColumn fx:id="lopColumn" prefWidth="40.0" text="Lớp" />
+                <TableColumn fx:id="diaChiColumn" prefWidth="170.0" text="Địa chỉ" />
+                <TableColumn fx:id="ghiChuTTColumn" prefWidth="223.0" text="Ghi Chú" />
             </columns>
         </TableView>
 
         <ChoiceBox fx:id="bang_CB" layoutX="10.0" layoutY="375.0" prefHeight="25.0" prefWidth="138.0" />
+      <Label layoutX="486.0" layoutY="14.0" text="Quản Lý Học Sinh" textFill="#da3d3d">
+         <font>
+            <Font size="29.0" />
+         </font>
+      </Label>
 
     </children>
 
